--- a/spring-shell/src/main/resources/application.properties
+++ b/spring-shell/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 
 # \u89E3\u51B3\u5FAA\u73AF\u5F15\u7528
+# org.springframework.shell.result.ResultHandlerConfig
 spring.main.allow-circular-references = true
