--- a/spring-shell/src/main/resources/application.yml
+++ b/spring-shell/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 
 # \u89E3\u51B3\u5FAA\u73AF\u5F15\u7528
 # org.springframework.shell.result.ResultHandlerConfig
-spring.main.allow-circular-references = true
+spring:
+  main:
+    allow-circular-references: true
+server:
+  port: 8084
