--- a/itools/pom.xml
+++ b/itools/pom.xml
@@ -95,6 +95,11 @@
         <version>1.15</version>
     </dependency>
     <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>easyexcel</artifactId>
+        <version>3.0.5</version>
+    </dependency>
+    <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.12.0</version>
@@ -121,5 +126,13 @@
         <artifactId>log4j-slf4j-impl</artifactId>
         <version>2.17.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.jline/jline -->
+    <dependency>
+        <groupId>org.jline</groupId>
+        <artifactId>jline</artifactId>
+        <version>3.21.0</version>
+    </dependency>
+
 </dependencies>
 </project>
