--- a/spring-data/src/main/resources/application.yml
+++ b/spring-data/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   redis:
     database: 0
     password: 123456
-    host: 82.156.194.95
+    host: localhost
 
   elasticsearch:
     uris: http://localhost:9200
