--- a/itools/pom.xml
+++ b/itools/pom.xml
@@ -28,6 +28,13 @@
         <artifactId>velocity</artifactId>
         <version>1.7</version>
     </dependency>
+
+    <dependency>
+        <groupId>com.github.ben-manes.caffeine</groupId>
+        <artifactId>caffeine</artifactId>
+        <version>2.9.3</version>
+    </dependency>
+
     <dependency>
         <groupId>cglib</groupId>
         <artifactId>cglib</artifactId>
@@ -132,6 +139,12 @@
         <groupId>org.jline</groupId>
         <artifactId>jline</artifactId>
         <version>3.21.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-autoconfigure</artifactId>
+        <version>2.6.2</version>
+        <scope>compile</scope>
     </dependency>
 
 </dependencies>
