--- a/spring-data/src/main/resources/application.yml
+++ b/spring-data/src/main/resources/application.yml
@@ -24,4 +24,9 @@ server:
 #      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
 #      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
 
+# 打印 sql
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
 
